# VisionText

./: .gitignore  CMakeLists.txt  README.md
buildsystem/: configuration.cmake  library_support.cmake
executable/: CMakeLists.txt  main.cpp
production/: CMakeLists.txt
production/include/processing/: ProcessingConfiguration.h  ProcessingHelper.h  ProcessingManager.h  thresholder.h
production/include/recognition/: IRecognitionManager.h  TesseractManager.h
production/libs/: CMakeLists.txt
production/src/: CMakeLists.txt
production/src/processing/: CMakeLists.txt  ProcessingManager.cpp  thresholder.cpp
production/src/recognition/: CMakeLists.txt  TesseractManager.cpp
tests/: CMakeLists.txt
tests/testcases/: CMakeLists.txt
tests/testcases/environment/: ProcessingManagerTests.cpp
