CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(TextVision)

INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Tesseract_INCLUDE_DIRS})

ADD_SUBDIRECTORY(processing)
ADD_SUBDIRECTORY(recognition)

SET(INTERNAL_LIBRARIES processing recognition PARENT_SCOPE)