CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME testcases)
PROJECT(${PROJECT_NAME})
SET(TESTCASES_PROJECT ${PROJECT_NAME} PARENT_SCOPE)

FILE(GLOB SOURCES ${TEST_DIR}/testcases/*/*.cpp)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTest_LIBS} ${INTERNAL_LIBRARIES} ${SEMI_INTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES})

MESSAGE(STATUS "Building testcase project")
